2014-09-01  Glenn Morris  <rgm@gnu.org>

	* tutorial.el (tutorial--display-changes):
	Fix 2014-07-29 change.  (Bug#18382)

2014-08-29  Ken Brown  <kbrown@cornell.edu>

	* startup.el (fancy-splash-frame): Extend the fix for Bug#16014 to
	the Cygwin-w32 build.  (Bug#18347)

2014-08-28  Glenn Morris  <rgm@gnu.org>

	* tar-mode.el (tar--extract, tar-extract):
	Avoid permanently disabling undo in extracted buffers.  (Bug#18344)

2014-08-27  Michael Albinus  <michael.albinus@gmx.de>

	* emacs-lisp/authors.el (authors-aliases): Addition.

	* net/tramp-adb.el: Spell author name correctly.

2014-08-27  João Távora  <joaotavora@gmail.com>

	* net/shr.el (shr-expand-url): Plain expand-file-name is not enough;
	use url-expand-file-name.  (Bug#18310)

2014-08-25  Glenn Morris  <rgm@gnu.org>

	* emulation/cua-rect.el (cua--highlight-rectangle):
	Avoid error at point-min.  (Bug#18309)

2014-08-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-shell-prompt-detect): Remove redundant
	executable-find (bug#18244).

	* simple.el (self-insert-uses-region-functions): Defvar.

2014-08-13  Leo Liu  <sdl.web@gmail.com>

	* speedbar.el (speedbar-generic-list-tag-p): Allow special
	elements from imenu.

2014-08-11  Glenn Morris  <rgm@gnu.org>

	* subr.el (with-output-to-temp-buffer): Doc fix; from elisp manual.

	* files.el (basic-save-buffer-2): Revert 2013-01-31 change, which
	chose coding system for writing before backing up, since it causes
	a more serious problem than the one it solves.  (Closes Bug#18141,
	reopens Bug#13522.)

2014-08-10  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-total-size): Make doc-string more
	self-contained.

2014-08-09  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-below-selected): Restore original
	behavior if buffer is already displayed in the window below the
	selected one (Bug#18181).

2014-08-08  Stefan Monnier  <monnier@iro.umontreal.ca>
